--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@cac-base/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve playground --hmr"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~19.0.0",
@@ -13,6 +15,7 @@
     "@angular/platform-browser": "~19.0.0",
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
+    "@ngneat/elf": "^2.5.1",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -55,6 +58,7 @@
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
