--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngneat/elf-persist-state": "^1.2.1",
     "date-fns": "^4.1.0",
     "date-fns-jalali": "^4.1.0-0",
+    "inputmask": "^5.0.9",
     "ngx-file-drop": "^16.0.0",
     "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.0",
@@ -52,6 +53,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/inputmask": "^5.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
