--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cac-base/source",
+  "name": "@controladad/ng-base-source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
