--- a/libs/base/package.json
+++ b/libs/base/package.json
@@ -1,9 +1,45 @@
 {
-  "name": "@cac/base",
+  "name": "@controladad/ng-base",
   "version": "1.0.0",
+  "description": "Everything you need for Angular",
+  "author": {
+    "name": "ControlAdad"
+  },
+  "keywords": ["angular", "material", "extend", "essentials"],
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/controladad/ng-base"
+  },
   "peerDependencies": {
+    "@al00x/printer": "^1.3.1",
+    "@al00x/screen-detector": "^1.3.1",
     "@angular/common": "^19.0.0",
-    "@angular/core": "^19.0.0"
+    "@angular/core": "^19.0.0",
+    "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.0.4",
+    "@angular/compiler": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/material": "^19.0.4",
+    "@angular/material-date-fns-adapter": "^19.0.4",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
+    "@ngneat/elf": "^2.5.1",
+    "@ngneat/elf-persist-state": "^1.2.1",
+    "date-fns": "^4.1.0",
+    "date-fns-jalali": "^4.1.0-0",
+    "inputmask": "^5.0.9",
+    "ngx-file-drop": "^16.0.0",
+    "ngx-skeleton-loader": "^9.0.0",
+    "tailwindcss": "^3.4.17",
+    "rxjs": "~7.8.0",
+    "tippy.js": "^6.3.7"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
   },
   "sideEffects": false
 }
