--- a/nx.json
+++ b/nx.json
@@ -14,6 +14,11 @@
     ],
     "sharedGlobals": []
   },
+  "release": {
+    "version": {
+      "conventionalCommits": true
+    }
+  },
   "targetDefaults": {
     "@angular-devkit/build-angular:application": {
       "cache": true,
