--- a/nx.json
+++ b/nx.json
@@ -14,6 +14,18 @@
     ],
     "sharedGlobals": []
   },
+  "release": {
+    "conventionalCommits": {
+      "types": {
+        "update": {},
+        "change": {},
+        "config": {}
+      }
+    },
+    "version": {
+      "conventionalCommits": true
+    }
+  },
   "targetDefaults": {
     "@angular-devkit/build-angular:application": {
       "cache": true,
