--- a/nx.json
+++ b/nx.json
@@ -15,6 +15,14 @@
     "sharedGlobals": []
   },
   "release": {
+    "changelog": {
+      "projectChangelogs": {
+        "renderOptions": {
+          "authors": false,
+          "mapAuthorsToGitHubUsernames": false
+        }
+      }
+    },
     "conventionalCommits": {
       "types": {
         "update": {},
