--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,7 +6,7 @@
  pre-push:
    jobs:
      - name: Check if can push
-       run: git push --dry-run
+       run: git push --dry-run --no-verify
 
      - name: Release version
        run: npx nx release --skip-publish
