--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve playground --hmr",
-    "format": "nx format",
-    "bump": "npx nx release patch --skip-publish"
+    "format": "nx format"
   },
   "private": true,
   "dependencies": {
