--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     name: Publish
     runs-on: ubuntu-latest
+    environment: production
     permissions:
       contents: read
       id-token: write # needed for provenance data generation
