Fix build readme

--- a/libs/base/project.json
+++ b/libs/base/project.json
@@ -9,6 +9,13 @@
     "build": {
       "executor": "@nx/angular:package",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
+      "assets": [
+        {
+          "glob": "../../README.md",
+          "input": ".",
+          "output": "."
+        }
+      ],
       "options": {
         "project": "libs/base/ng-package.json"
       },
