--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,10 @@ jobs:
         run: npx nx report
         shell: bash
 
+      - name: Copy static files
+        run: cp ./README.md ./libs/base/README.md
+        shell: bash
+
       - name: Publish packages
         run: npx nx release publish
         shell: bash
