--- a/nx.json
+++ b/nx.json
@@ -26,6 +26,14 @@
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
     },
+    "nx-release-publish": {
+      "dependsOn": [
+        "build"
+      ],
+      "options": {
+        "packageRoot": "dist/{projectRoot}"
+      }
+    },
     "@nx/eslint:lint": {
       "cache": true,
       "inputs": [
