--- a/libs/base/package.json
+++ b/libs/base/package.json
@@ -11,6 +11,9 @@
     "extend",
     "essentials"
   ],
+  "exports": {
+    "./tailwind": "./tailwind.js"
+  },
   "publishConfig": {
     "access": "public"
   },
