Added localization + Fixes

--- a/apps/playground/project.json
+++ b/apps/playground/project.json
@@ -19,7 +19,8 @@
         "assets": [
           {
             "glob": "**/*",
-            "input": "apps/playground/public"
+            "input": "apps/playground/public",
+            "output": "assets"
           },
           {
             "input": "libs/base/src/assets",
