--- a/libs/base/project.json
+++ b/libs/base/project.json
@@ -31,6 +31,14 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint"
-    }
+    },
+    "extract-i18n": {
+        "executor": "@angular-devkit/build-angular:extract-i18n",
+        "options": {
+          "buildTarget": "base:build",
+          "outputPath": "libs/base/src/locales",
+          "format": "json"
+        }
+      }
   }
 }
