--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nx serve playground --hmr",
     "format": "nx format",
-    "extract-tailwind": "npx tailwindcss -c ./tailwind.config.ts -i dist/libs/base/styles.scss -o dist/libs/base/output.scss",
+    "extract-tailwind": "npx tailwindcss -c ./tailwind.config.ts -i ./libs/base/src/styles.scss -o ./dist/libs/base/tailwind.css --postcss",
     "localize": "nx run base:extract-i18n"
   },
   "private": true,
@@ -75,6 +75,7 @@
     "ng-packagr": "~19.0.0",
     "nx": "20.3.0",
     "postcss": "^8.4.5",
+    "postcss-scss": "^4.0.9",
     "postcss-url": "~10.1.3",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
