--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~19.0.0",
     "@ngneat/elf": "^2.5.1",
     "@ngneat/elf-persist-state": "^1.2.1",
+    "@tailwindcss/postcss": "^4.0.4",
     "date-fns": "^4.1.0",
     "date-fns-jalali": "^4.1.0-0",
     "inputmask": "^5.0.9",
@@ -75,11 +76,11 @@
     "ng-extract-i18n-merge": "^2.14.0",
     "ng-packagr": "~19.0.0",
     "nx": "20.3.0",
-    "postcss": "^8.4.5",
+    "postcss": "^8.5.1",
     "postcss-scss": "^4.0.9",
     "postcss-url": "~10.1.3",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.4",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
