WIP Table Extending approach

--- a/nx.json
+++ b/nx.json
@@ -27,9 +27,7 @@
       "inputs": ["production", "^production"]
     },
     "nx-release-publish": {
-      "dependsOn": [
-        "build"
-      ],
+      "dependsOn": ["build"],
       "options": {
         "packageRoot": "dist/{projectRoot}"
       }
